# MapRead_08_15_2018

./: CMakeLists.txt  README.md  parameters.txt
include/: imageOperators.h
src/: CMakeLists.txt  imageOperators.cpp  main.cpp
